Update on Mahill

--- a/index.html
+++ b/index.html
@@ -1,160 +1,301 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
-	<head>
-		<title>Mahill - Home</title>
-		<link rel="stylesheet" type="text/css" href="css/index.css">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="font-awesome/font-awesome/css/font-awesome.min.css">
-	</head>
-	<body>
-		<header>
-			<a href="">
-		 		<div class="logo">
-
-		 		</div>
-	 		</a>
-		</header>
- 		
-		<div class="back_wrap">
-			<div class="back1">
-				<div class="mah">
-					<h1>
-						Mahill Yogurt
-					</h1>
-					<p>
-						Super Yogurt
-					</p>
+<head>
+	<title>Mahill - Range</title>
+	<link rel="stylesheet" type="text/css" href="css/range.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="font-awesome/font-awesome/css/font-awesome.min.css">
+</head>
+<body>
+	<div class="body_wrapper">
+		<div class="main_body container">
+			<header>
+				<div class="logo"></div>
+				<div class="chart">
+					<span><i class="fa fa-shopping-cart" aria-hidden="true"></i> 0</span>
+				</div>
+			</header>
+			<div class="banner_wrapper">
+				<div class="banner"></div>
+			</div>
+			<div class="product_head">
+				<h1>Blackberry Super Yogurt</h1>
+			</div>
+			<div class="row rowroll">
+				<div class="col-md-3">
+					<div class="product">
+						<table>
+							<tr>
+								<td class="first_td">
+									<div class="image_one"></div>
+								</td>
+							</tr>
+							<tr>
+								<td class="second_td">
+									<h1>Super Yogurt</h1>
+									<div class="price_button clearfix">
+										<div class="price">
+											&#8358;2,000
+										</div>
+										<div class="button">
+											<button>
+												Buy
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product">
+						<table>
+							<tr>
+								<td class="first_td">
+									<div class="image_two"></div>
+								</td>
+							</tr>
+							<tr>
+								<td class="second_td">
+									<h1>Super Yogurt</h1>
+									<div class="price_button clearfix">
+										<div class="price">
+											&#8358;2,000
+										</div>
+										<div class="button">
+											<button>
+												Buy
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product">
+						<table>
+							<tr>
+								<td class="first_td">
+									<div class="image_three"></div>
+								</td>
+							</tr>
+							<tr>
+								<td class="second_td">
+									<h1>Super Yogurt</h1>
+									<div class="price_button clearfix">
+										<div class="price">
+											&#8358;2,000
+										</div>
+										<div class="button">
+											<button>
+												Buy
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product">
+						<table>
+							<tr>
+								<td class="first_td">
+									<div class="image_four"></div>
+								</td>
+							</tr>
+							<tr>
+								<td class="second_td">
+									<h1>Super Yogurt</h1>
+									<div class="price_button clearfix">
+										<div class="price">
+											&#8358;2,000
+										</div>
+										<div class="button">
+											<button>
+												Buy
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
-		</div>
-
-		<div class="content-container1">
-			<div class="container">
-				<div class="content-clearfix1">
-					<h1>
-						MAHILL FOODS <br>(brief  history)
-					</h1>
-
-					
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>
+			<div class="product_head">
+				<h1>Raspberry Super Yogurt</h1>
+			</div>
+			<div class="row rowroll">
+				<div class="col-md-3">
+					<div class="product">
+						<table>
+							<tr>
+								<td class="first_td">
+									<div class="image_five"></div>
+								</td>
+							</tr>
+							<tr>
+								<td class="second_td">
+									<h1>Super Yogurt</h1>
+									<div class="price_button clearfix">
+										<div class="price">
+											&#8358;2,000
+										</div>
+										<div class="button">
+											<button>
+												Buy
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product">
+						<table>
+							<tr>
+								<td class="first_td">
+									<div class="image_six"></div>
+								</td>
+							</tr>
+							<tr>
+								<td class="second_td">
+									<h1>Super Yogurt</h1>
+									<div class="price_button clearfix">
+										<div class="price">
+											&#8358;2,000
+										</div>
+										<div class="button">
+											<button>
+												Buy
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product">
+						<table>
+							<tr>
+								<td class="first_td">
+									<div class="image_seven"></div>
+								</td>
+							</tr>
+							<tr>
+								<td class="second_td">
+									<h1>Super Yogurt</h1>
+									<div class="price_button clearfix">
+										<div class="price">
+											&#8358;2,000
+										</div>
+										<div class="button">
+											<button>
+												Buy
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product">
+						<table>
+							<tr>
+								<td class="first_td">
+									<div class="image_eight"></div>
+								</td>
+							</tr>
+							<tr>
+								<td class="second_td">
+									<h1>Super Yogurt</h1>
+									<div class="price_button clearfix">
+										<div class="price">
+											&#8358;2,000
+										</div>
+										<div class="button">
+											<button>
+												Buy
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
-		</div>
-
-		<div class="back_wrap">
-			<div class="back2">
-
-			</div>
-		</div>
-
-		<div class="content-container2">
-			<div class="container">
-				<div class="content-clearfix2">
-					<div><img src="images/yog.jpg" style="width:300px;height:300px;"></div>
-
-					<h1 class="content1">
-						<strong class="sup">super yoghurt</strong>
-					</h1>
-					<br> <br>
-					<p class="adi">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>
-				</div>
-			</div>
-		</div>
-
-
-		<div class="back_wrap">
-			<div class="back3">
-			</div>
-		</div>
-
-		<div class="content-container3">
-			<div class="content-clearfix3">
-				<p class="ing">
-					<strong class="simple">4 Simple Ingredients</strong>
-					<br>
-						Our Super Yogurts are made using natures most delicious and nutritionally powerful ingredients
-						strained BIO yogurt, cold-pressed organic fruit, blossom honey, and absolutely nothing else.  
-					<br>
-						We refuse to use additives, preservatives, flavourings or nasties 
-						because what we don`t put in matters just as much as what we do.
-				</p>
-			</div>
-		</div>
-
-
-		<div class="back_wrap clearfix">
-			<div class="back4">
-			</div>
-		</div>
-		<footer class="clearfix">
-			<div class="container clearfix">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="content_wrap">
-							<div class="follow_us">
-								<p>FOLLOW US ON:</p>
+			<footer class="clearfix">
+				<div class="container clearfix">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="content_wrap">
+								<div class="follow_us">
+									<p>FOLLOW US ON:</p>
+								</div>
+								<div class="social_icon">
+									<ul>
+										<li>
+							  				<a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+						  				</li>
+							  			<li>
+							  				<a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
+						  				</li>
+							  			<li>
+							  				<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+						  				</li>
+							  			<li>
+							  				<a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+						  				</li>
+									</ul>
+								</div>
 							</div>
-							<div class="social_icon">
+						</div>
+						<div class="col-md-6">
+							<div class="content_wrap clearfix">
 								<ul>
 									<li>
-						  				<a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-					  				</li>
-						  			<li>
-						  				<a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-					  				</li>
-						  			<li>
-						  				<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					  				</li>
-						  			<li>
-						  				<a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-					  				</li>
+										<a href="index.html">Home</a>
+									</li>
+									<li>
+										<a href="about.html">About Us</a>
+									</li>
+									<li>
+										<a href="">Contact Us</a>
+									</li>
 								</ul>
+								<p>
+									sign up to get the latest on sales,new releases and more... 
+								</p>
+								<form class="clearfix">
+									<input type="email" name="email" placeholder="Enter your e-mail" required>
+									<input type="submit" value="Send" class="button">
+								</form>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="content_wrap clearfix">
-							<ul>
-								<li>
-									<a href="contact.html">contact us</a>
-								</li>
-								<li>
-									<a href="index.html">our range</a>
-								</li>
-							</ul>
-							<p>
-								sign up to get the latest on sales,new releases and more... 
-							</p>
-							<form>
-								<input type="email" name="email" placeholder="Enter your e-mail" required>
-								<input type="submit" value="Send" class="button">
-							</form>
-						</div>
-					</div>
 				</div>
-			</div>
-			<div class="copy_right">
-				<p>
-					&#169;Copyright 2016 MAHILLFODS . All Rights Reserved 
-				</p>
-				<p>
-					Powered by <a href="http://www.effluxcompany.com" target="_blank">Efflux</a>
-				</p>
-			</div>
-		</footer>
+				<div class="copy_right">
+					<p>
+						&#169;Copyright 2016 MAHILLFODS . All Rights Reserved 
+					</p>
+					<p>
+						Powered by <a href="http://www.effluxcompany.com" target="_blank">Efflux</a>
+					</p>
+				</div>
+			</footer>
+		</div>
+	</div>
 </body>
 </html>
