--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="font-awesome/font-awesome/css/font-awesome.min.css">
+		<script type="text/javascript"></script>
 	</head>
 	<body>
 		<header>
