--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
-	<title>Mahill - Range</title>
+	<title>Mahill - Home</title>
 	<link rel="stylesheet" type="text/css" href="css/range.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="font-awesome/font-awesome/css/font-awesome.min.css">
