--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mahill - Home</title>
+		<title>Mahill - About</title>
 		<link rel="stylesheet" type="text/css" href="css/about.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="font-awesome/font-awesome/css/font-awesome.min.css">
