--- a/checkout.html
+++ b/checkout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
-	<title>mahill-checkout</title>
+	<title>Mahill-Checkout</title>
 	<link rel="stylesheet" type="text/css" href="css/checkout.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="font-awesome/font-awesome/css/font-awesome.min.css">
